--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
         </div>
     </div>
 
+
+    <div class="pagination">
+        <a href="index.html">1</a>
+        <a href="products.html">2</a>
+    </div>
+
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/script.js"></script>
 
