--- a/products.html
+++ b/products.html
@@ -11,7 +11,6 @@
 <body>
 
     <div class="product__wrap">
-
         <ul class="product__list">
             <li class="product__item">
                 <div class="product__wrap-img">
@@ -185,15 +184,19 @@
                 </div>
             </li>
         </ul>
+    </div>
 
-
+    <div class="pagination">
+        <a href="index.html">1</a>
+        <a href="products.html">2</a>
     </div>
 
 
 
 
 
-<script src="js/jquery-3.4.1.min.js"></script>
+
+    <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/script.js"></script>
 
 </body>
