--- a/products.html
+++ b/products.html
@@ -21,7 +21,7 @@
                 <a class="btn__cart" href="#">Add to Cart</a>
                 <div class="product__rating">
                     <div class="product__star-wrap">
-                        <div class="product__star-three"></div>
+                        <div class="product__star product__star--three"></div>
                     </div>
                 </div>
                 <div class="product__text-wrap">
@@ -35,12 +35,12 @@
                 <div class="product__wrap-img">
                     <img class="product__img" src="img/product-2.jpg" width="135" height="135" alt="product-1">
                 </div>
-                <h3 class="product__title">Coalesce: Functioning On Impatience T-Shirt</h3>
+                <h3 class="product__title">Ink Eater: Krylon Bombear Destroyed Tee</h3>
                 <div class="product__price">$<span class="product__price-doll">22.</span>00</div>
                 <a class="btn__cart" href="#">Add to Cart</a>
                 <div class="product__rating">
                     <div class="product__star-wrap">
-                        <div class="product__star-five"></div>
+                        <div class="product__star product__star--five"></div>
                     </div>
                 </div>
                 <div class="product__text-wrap">
@@ -54,12 +54,12 @@
                 <div class="product__wrap-img">
                     <img class="product__img" src="img/product-3.jpg" width="135" height="135" alt="product-1">
                 </div>
-                <h3 class="product__title">Coalesce: Functioning On Impatience T-Shirt</h3>
+                <h3 class="product__title">The Only Children: Paisley T-Shirt</h3>
                 <div class="product__price">$<span class="product__price-doll">55.</span>00</div>
                 <a class="btn__cart" href="#">Add to Cart</a>
                 <div class="product__rating">
                     <div class="product__star-wrap">
-                        <div class="product__star-one"></div>
+                        <div class="product__star product__star--one"></div>
                     </div>
                 </div>
                 <div class="product__text-wrap">
@@ -73,12 +73,12 @@
                 <div class="product__wrap-img">
                     <img class="product__img" src="img/product-4.jpg" width="135" height="135" alt="product-1">
                 </div>
-                <h3 class="product__title">Coalesce: Functioning On Impatience T-Shirt</h3>
+                <h3 class="product__title">Zolof The Rock And Roll Destroyer: LOL Cat T-shirt</h3>
                 <div class="product__price">$<span class="product__price-doll">13.</span>50</div>
                 <a class="btn__cart" href="#">Add to Cart</a>
                 <div class="product__rating">
                     <div class="product__star-wrap">
-                        <div class="product__star-five"></div>
+                        <div class="product__star product__star--five"></div>
                     </div>
                 </div>
                 <div class="product__text-wrap">
@@ -92,12 +92,12 @@
                 <div class="product__wrap-img">
                     <img class="product__img" src="img/product-5.jpg" width="135" height="135" alt="product-1">
                 </div>
-                <h3 class="product__title">Coalesce: Functioning On Impatience T-Shirt</h3>
+                <h3 class="product__title">The Get Up Kids: Band Camp Pullover Hoodie</h3>
                 <div class="product__price">$<span class="product__price-doll">13.</span>50</div>
                 <a class="btn__cart" href="#">Add to Cart</a>
                 <div class="product__rating">
                     <div class="product__star-wrap">
-                        <div class="product__star-five"></div>
+                        <div class="product__star product__star--five"></div>
                     </div>
                 </div>
                 <div class="product__text-wrap">
@@ -111,12 +111,12 @@
                 <div class="product__wrap-img">
                     <img class="product__img" src="img/product-6.jpg" width="135" height="135" alt="product-1">
                 </div>
-                <h3 class="product__title">Coalesce: Functioning On Impatience T-Shirt</h3>
+                <h3 class="product__title">Kenneth Cole New York Men's Con-verge Slip-on</h3>
                 <div class="product__price">$<span class="product__price-doll">12.</span>30</div>
                 <a class="btn__cart" href="#">Add to Cart</a>
                 <div class="product__rating">
                     <div class="product__star-wrap">
-                        <div class="product__star-one"></div>
+                        <div class="product__star product__star--one"></div>
                     </div>
                 </div>
                 <div class="product__text-wrap">
@@ -130,12 +130,12 @@
                 <div class="product__wrap-img">
                     <img class="product__img" src="img/product-7.jpg" width="135" height="135" alt="product-1">
                 </div>
-                <h3 class="product__title">Coalesce: Functioning On Impatience T-Shirt</h3>
+                <h3 class="product__title">ASICS® Men's GEL- Kayano® XII</h3>
                 <div class="product__price">$<span class="product__price-doll">169.</span>99</div>
                 <a class="btn__cart" href="#">Add to Cart</a>
                 <div class="product__rating">
                     <div class="product__star-wrap">
-                        <div class="product__star-three"></div>
+                        <div class="product__star product__star--three"></div>
                     </div>
                 </div>
                 <div class="product__text-wrap">
@@ -145,16 +145,16 @@
                     </p>
                 </div>
             </li>
-            <li class="product__item">
+            <li class="product__item product__item--substrate">
                 <div class="product__wrap-img">
                     <img class="product__img" src="img/product-8.jpg" width="135" height="135" alt="product-1">
                 </div>
-                <h3 class="product__title">Coalesce: Functioning On Impatience T-Shirt</h3>
+                <h3 class="product__title">CN Clogs Beach/ Garden Clog</h3>
                 <div class="product__price">$<span class="product__price-doll">134.</span>99</div>
                 <a class="btn__cart" href="#">Add to Cart</a>
                 <div class="product__rating">
                     <div class="product__star-wrap">
-                        <div class="product__star-four"></div>
+                        <div class="product__star product__star--four"></div>
                     </div>
                 </div>
                 <div class="product__text-wrap">
@@ -173,7 +173,7 @@
                 <a class="btn__cart" href="#">Add to Cart</a>
                 <div class="product__rating">
                     <div class="product__star-wrap">
-                        <div class="product__star-one"></div>
+                        <div class="product__star product__star--one"></div>
                     </div>
                 </div>
                 <div class="product__text-wrap">
