--- a/products.html
+++ b/products.html
@@ -71,10 +71,10 @@
             </li>
             <li class="product__item">
                 <div class="product__wrap-img">
-                    <img class="product__img" src="img/product-4.jpg" width="135" height="135" alt="product-1">
+                    <img class="product__img" src="img/product-1.jpg" width="135" height="135" alt="product-1">
                 </div>
-                <h3 class="product__title">Zolof The Rock And Roll Destroyer: LOL Cat T-shirt</h3>
-                <div class="product__price">$<span class="product__price-doll">13.</span>50</div>
+                <h3 class="product__title">Coalesce: Functioning On Impatience T-Shirt</h3>
+                <div class="product__price">$<span class="product__price-doll">15.</span>00</div>
                 <a class="btn__cart" href="#">Add to Cart</a>
                 <div class="product__rating">
                     <div class="product__star-wrap">
